# Lumin-india-ops

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: analytics.py  auth_mw.py  config.py  exports.py  main.py  ranges.py
app/data_sources/: engine_api.py
app/routes/: allocator.py  auth.py  control.py  edge.py  outcomes.py  pulse.py  quality.py  signals.py  strategy.py  suppressed.py
app/static/: style.css
app/templates/: allocator.html  base.html  control.html  edge.html  login.html  outcomes.html  pulse.html  quality.html  signals.html  strategy.html  suppressed.html
tests/: test_analytics.py  test_app.py  test_control.py
